--- a/tensor_io/CMakeLists.txt
+++ b/tensor_io/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
 add_executable(process_frostt_tensor process_frostt_tensor.cpp)
 
-target_compile_options(process_frostt_tensor PRIVATE -O3) 
+#target_compile_options(process_frostt_tensor PRIVATE ) 
 
 #foreach(TARGET bench_file bench_er bench_heatmap local_kernel_benchmark scratch)
 #    target_compile_options(${TARGET} PRIVATE -O3 -march=knl -DMKL_ILP64  -m64  -I$ENV{MKLROOT}/include) 
