Writing a benchmark for one-sided MPI.

--- a/one_sided_comm_bench/CMakeLists.txt
+++ b/one_sided_comm_bench/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(tensor_io)
+project(one_sided_comm_bench)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
 configure_file(modules.sh modules.sh COPYONLY)
 
-add_executable(process_frostt_tensor process_frostt_tensor.cpp)
+add_executable(bench_accum bench_accum_get.cpp)
