--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,19 @@ __pycache__
 data/*
 visualization/*
 tensor_io/build/*
-one_sided_comm_bench/build/*
-!one_sided_comm_bench/build/jobscript.sh
+experimental/one_sided_comm_bench/build/
+!experimental/one_sided_comm_bench/build/jobscript.sh
 tensors/*
 .rendered*
 *.cpython*
-cpp_ext/build
+exafac/cpp_ext/build
 .ipynb_checkpoints/*
 *.swp
-conversion_receipt.out
 .vscode/*
 tommyds
 sparsehash
 cuckoofilter
 sparsehash-c11
 libcuckoofilter.a
+!data/.empty
+!tensors/.empty
