--- a/experimental/graphblas_io/CMakeLists.txt
+++ b/experimental/graphblas_io/CMakeLists.txt
@@ -9,8 +9,8 @@ configure_file(modules.sh modules.sh COPYONLY)
 
 add_executable(grb_test prog.cpp)
 target_include_directories(grb_test PUBLIC /global/project/projectdirs/m1982/vbharadw/rdist_tensor/GraphBLAS/Include)
-target_compile_options(grb_test PRIVATE -O3)
+target_compile_options(grb_test PRIVATE -O3 -std=c++17 -lstdc++fs -march=haswell)
 
-target_link_options(grb_test PRIVATE -L/global/project/projectdirs/m1982/vbharadw/rdist_tensor/GraphBLAS/build/ -lgraphblas
+target_link_options(grb_test PRIVATE -L/global/project/projectdirs/m1982/vbharadw/rdist_tensor/GraphBLAS/build/ -lgraphblas -march=haswell
 
 )
