Made some modifications for Summit access.

--- a/tensor_io/CMakeLists.txt
+++ b/tensor_io/CMakeLists.txt
@@ -5,6 +5,9 @@ project(tensor_io)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
+set(CMAKE_C_COMPILER "h5cc")
+set(CMAKE_CXX_COMPILER "h5c++")
+
 configure_file(modules.sh modules.sh COPYONLY)
 
 add_executable(process_frostt_tensor process_frostt_tensor.cpp)
