Plotting in progress...

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ sparsehash-c11
 libcuckoofilter.a
 GraphBLAS
 oneTBB
+analysis/figures/*
+slurm*
 !data/.empty
 !tensors/.empty
 !tensors/frostt_tensors.txt
