--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 __pycache__
 data/*
 visualization/*
+!visualization/plotting_script.py
 tensor_io/build/*
 experimental/one_sided_comm_bench/build/
 experimental/graphblas_io/build/
